# TP2_biblioteca_de_musica

./: .gitignore  CMakeLists.txt  Makefile  README.md  TP-PDS2.drawio
csv/: albums.csv  artists.csv  listeners.csv  lyrics.csv  playlists.csv  songs.csv  users.csv
doc/: TP-PDS2.drawio
include/: Album.hpp  Artist.hpp  ClassicalMusic.hpp  Listener.hpp  Music.hpp  MusicDatabase.hpp  MusicNotFoundException.hpp  Playlist.hpp  RockMusic.hpp  Song.hpp  Song_pt.hpp  System.hpp  User.hpp  auxiliares.hpp  popMusic.hpp
include/album/: Album.hpp
include/artist/: Artist.hpp
include/artista/: Artista.hpp
include/listener/: Listener.hpp
include/music/: Music.hpp
include/musica/: Musica.hpp
include/ouvinte/: Ouvinte.hpp
include/playlist/: Playlist.hpp
include/sistema/: Sistema.hpp
include/song/: Song.hpp
include/system/: System.hpp  csv.hpp
include/user/: User.hpp
include/usuario/: Usuario.hpp
src/: Album.cpp  Artist.cpp  ClassicalMusic.cpp  Listener.cpp  Music.cpp  MusicDatabase.cpp  Playlist.cpp  RockMusic.cpp  Song.cpp  Song_pt.cpp  System.cpp  User.cpp  auxiliares.cpp  csv.cpp  main.cpp  main2.cpp  popMusic.cpp
src/album/: Album.cpp
src/artist/: Artist.cpp
src/artista/: Artista.cpp
src/listener/: Listener.cpp
src/music/: Music.cpp
src/musica/: Musica.cpp
src/song/: Song.cpp
src/system/: System.cpp  csv.cpp
src/user/: User.cpp
src/usuario/: Usuario.cpp
